[gd_scene load_steps=10 format=3 uid="uid://oi0g3fl8c3sc"]

[ext_resource type="Script" path="res://player/pokemon_inventar.gd" id="1_co2gj"]
[ext_resource type="Texture2D" uid="uid://cwe2m5qysl1yx" path="res://art/mudkip.png" id="2_0j55g"]

[sub_resource type="FontFile" id="FontFile_0g0mj"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Theme" id="Theme_nsywu"]
default_font = SubResource("FontFile_0g0mj")
CodeEdit/colors/j = Color(0, 0, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_jkfvv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vjm6j"]
bg_color = Color(0.28125, 0.243896, 0.243896, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pame0"]
bg_color = Color(0.789063, 0.0308228, 0.0308228, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_82qpu"]
bg_color = Color(0.282353, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cug71"]

[node name="pokemonMen√ºs" type="CanvasLayer"]
script = ExtResource("1_co2gj")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 240.0
offset_bottom = 135.0
theme = SubResource("Theme_nsywu")

[node name="CanvasModulate" type="CanvasModulate" parent="Control"]
show_behind_parent = true
position = Vector2(370, 67)

[node name="Background" type="TextureRect" parent="Control/CanvasModulate"]
modulate = Color(0.0606537, 0.156847, 0.292969, 1)
offset_left = -370.0
offset_top = -67.0
offset_right = -130.0
offset_bottom = 68.0
texture = SubResource("CanvasTexture_jkfvv")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
custom_minimum_size = Vector2(20, 20)
offset_left = 23.0
offset_top = 12.0
offset_right = 84.0
offset_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Control/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
color = Color(0.243137, 0.172549, 0.172549, 0.521569)

[node name="PokemonTexture" type="TextureRect" parent="Control/VBoxContainer/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 16.0
offset_bottom = 17.0
texture = ExtResource("2_0j55g")
expand_mode = 1

[node name="PokemonHP" type="ProgressBar" parent="Control/VBoxContainer/ColorRect"]
layout_mode = 0
offset_left = 36.0
offset_top = 3.0
offset_right = 58.0
offset_bottom = 5.0
theme_override_styles/background = SubResource("StyleBoxFlat_vjm6j")
theme_override_styles/fill = SubResource("StyleBoxFlat_pame0")
value = 20.0
show_percentage = false

[node name="PokemonName" type="Label" parent="Control/VBoxContainer/ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 1.0
offset_right = 133.0
offset_bottom = 24.0
scale = Vector2(0.1, 0.1)
text = "Pokemon Name"

[node name="PokemonHPText" type="Label" parent="Control/VBoxContainer/ColorRect"]
offset_left = 54.0
offset_top = 6.0
offset_right = 114.0
offset_bottom = 29.0
scale = Vector2(0.1, 0.1)
text = "X/X HP"

[node name="PokemonXP" type="ProgressBar" parent="Control/VBoxContainer/ColorRect"]
offset_left = 18.0
offset_top = 18.0
offset_right = 58.0
offset_bottom = 19.0
theme_override_styles/background = SubResource("StyleBoxFlat_82qpu")
theme_override_styles/fill = SubResource("StyleBoxFlat_cug71")
value = 20.0
show_percentage = false

[node name="PokemonXPText" type="Label" parent="Control/VBoxContainer/ColorRect"]
offset_left = 54.0
offset_top = 15.0
offset_right = 114.0
offset_bottom = 38.0
scale = Vector2(0.1, 0.1)
text = "X/X XP"

[node name="ColorRect2" type="ColorRect" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
color = Color(0.243137, 0.172549, 0.172549, 0.521569)

[node name="ColorRect3" type="ColorRect" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
color = Color(0.243137, 0.172549, 0.172549, 0.521569)

[node name="ColorRect4" type="ColorRect" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
color = Color(0.243137, 0.172549, 0.172549, 0.521569)

[node name="ColorRect5" type="ColorRect" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
color = Color(0.243137, 0.172549, 0.172549, 0.521569)
